--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "@yext/answers-headless-react": "^1.2.0",
     "@yext/answers-react-components": "^0.2.0-beta.184",
     "react": "^17.0.2",
